--- a/index.html
+++ b/index.html
@@ -1,1 +1,26 @@
-Hello World
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Home of Web_Dev_Rich</title>
+    <link rel="stylesheet" href="css/styles.css">
+</head>
+<body>
+    <h1>I am Rich Keyzor</h1>
+    <h2>Front-end Web Developer</h2>
+    <dl>
+        <dt>Skills</dt>
+        <dd>HTML5</dd>
+        <dd>CSS3</dd>
+        <dd>JavaScript</dd>
+        <dd>jQuery</dd>
+        <dd>PHP</dd>
+    </dl>
+    <dl>
+        <dt>Contact me</dt>
+        <dd>GitHub <a href="https://github.com/Web-Dev-Rich">Web-Dev-Rich</a></dd>
+        <dd>Twitter <a href="https://twitter.com/web_dev_rich">@Web_Dev_Rich</a></dd>
+    </dl>
+</body>
+</html>
