--- a/index.html
+++ b/index.html
@@ -22,5 +22,15 @@
         <dd>GitHub <a href="https://github.com/Web-Dev-Rich">Web-Dev-Rich</a></dd>
         <dd>Twitter <a href="https://twitter.com/web_dev_rich">@Web_Dev_Rich</a></dd>
     </dl>
+
+    <script>
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+        ga('create', 'UA-59738014-1', 'auto');
+        ga('send', 'pageview');
+    </script>
 </body>
 </html>
