--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="500, initial-scale=1">
     <title>Home of Web_Dev_Rich</title>
     <link rel="stylesheet" href="css/styles.css">
+    <link href='https://fonts.googleapis.com/css?family=Lato:300, 400, 700' rel='stylesheet' type='text/css'>
 </head>
 <body>
     <h1>I am Rich Keyzor</h1>
