--- a/index.html
+++ b/index.html
@@ -9,21 +9,34 @@
     <link href='https://fonts.googleapis.com/css?family=Lato:300, 400, 700' rel='stylesheet' type='text/css'>
 </head>
 <body>
-    <h1>I am Rich Keyzor</h1>
-    <h2>Front-end Web Developer</h2>
-    <dl>
-        <dt>Skills</dt>
-        <dd>HTML5</dd>
-        <dd>CSS3</dd>
-        <dd>JavaScript</dd>
-        <dd>jQuery</dd>
-        <dd>PHP</dd>
-    </dl>
-    <dl>
-        <dt>Contact me</dt>
-        <dd>GitHub <a href="https://github.com/Web-Dev-Rich">Web-Dev-Rich</a></dd>
-        <dd>Twitter <a href="https://twitter.com/web_dev_rich">@Web_Dev_Rich</a></dd>
-    </dl>
+    <div class="wrapper">
+        <header>
+            <img src="assets/img/mypic.png">
+            <h1>I am Rich Keyzor</h1>
+            <h2>Front-end Web Developer</h2>
+        </header>
+        <nav>
+
+        </nav>
+        <div class="main">
+            <div class="projects">
+                <ul>
+                    <li>Project 1</li>
+                    <li>Project 2</li>
+                </ul>
+            </div><!-- ./projects -->
+            <div class="writings">
+                <ul>
+                    <li>Writing 1</li>
+                    <li>Writing 2</li>
+                </ul>
+            </div><!-- ./writings -->
+        </div><!-- ./main -->
+        <div class="about-me">
+            <h1>About mw</h1>
+            <p>Stuff about me.</p>
+        </div><!-- ./about-me -->
+    </div><!-- ./wrapper -->
 
     <script>
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
