Head nod more vendors

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="500, initial-scale=1">
-    <title>Home of Web_Dev_Rich</title>
+    <title>@Web_Dev_Rich</title>
     <link rel="stylesheet" href="assets/css/styles.css">
     <link href='https://fonts.googleapis.com/css?family=Lato:300, 400, 700' rel='stylesheet' type='text/css'>
 </head>
@@ -33,7 +33,7 @@
             </div><!-- ./writings -->
         </div><!-- ./main -->
         <div class="about-me">
-            <h1>About mw</h1>
+            <h1>About me</h1>
             <p>Stuff about me.</p>
         </div><!-- ./about-me -->
     </div><!-- ./wrapper -->
