Style and content updates

--- a/index.html
+++ b/index.html
@@ -13,28 +13,35 @@
     <div class="wrapper">
         <header>
             <img src="assets/img/mypic.png">
-            <h1>I am Rich Keyzor</h1>
-            <h2>Front-end Web Developer</h2>
-        </header>
-        <nav>
-
-        </nav>
-        <div class="main">
-            <div class="projects">
+            <h1>Rich Keyzor</h1>
+            <nav>
                 <ul>
-                    <li>Project 1</li>
-                    <li>Project 2</li>
+                    <li><a href="#projects">Projects</a></li>
+                    <li><a href="#writings">Writings</a></li>
+                    <li><a href="#about-me">About</a></li>
+                </ul>
+            </nav>
+        </header>
+        <div class="main">
+            <div class="projects" id="projects">
+                <h3>Projects</h3>
+                <ul>
+                    <li>A little <a href="http://freckleboy.uk/MyWebsites/7.%20PHP/weather-predictor.php">Weather Predictor app</a> that uses <span class="skill">HTML</span>/<span class="skill">CSS</span>/<span class="skill">jQuery</span>/<span class="skill">PHP</span> and a little <span class="skill">Bootstrap</span> styling.</li>
+                    <li><a href="http://freckleboy.uk/MyWebsites/8.%20MySQL/secret-diary-project/index.php">Secret Diary</a>. An app for recording your thoughts. Built with <span class="skill">HTML</span>/<span class="skill">CSS</span>/<span class="skill">PHP</span>/<span class="skill">MySQL</span> and a sprinkling of <span class="skill">Bootstrap</span> styling.</li>
+                    <li>A <a href="http://freckleboy.uk/MyWebsites/9.%20APIs/postcode-finder/postcode-finder.php">Postcode Finder</a> that uses the <a href="https://developers.google.com/maps/documentation/geocoding/">Google Maps Geocoding API</a> to find a postcode from an address. Built with <span class="skill">HTML</span>/<span class="skill">CSS</span>/<span class="skill">jQuery</span>/<span class="skill">PHP</span> and styled again, with <span class="skill">Bootstrap</span>.</li>
+                    <li>Well, this very site, hand-forged from <span class="skill">HTML</span> and <span class="skill">CSS</span> in the fires of Sublime Text.</li>
                 </ul>
             </div><!-- ./projects -->
-            <div class="writings">
+            <div class="writings" id="writings">
+                <h3>Writings</h3>
                 <ul>
-                    <li>Writing 1</li>
-                    <li>Writing 2</li>
+                    <li><a href="">Writing 1</a></li>
+                    <li><a href="">Writing 2</a></li>
                 </ul>
             </div><!-- ./writings -->
         </div><!-- ./main -->
-        <div class="about-me">
-            <h1>About me</h1>
+        <div class="about-me" id="about-me">
+            <h1>About Rich Keyzor</h1>
             <p>Stuff about me.</p>
         </div><!-- ./about-me -->
     </div><!-- ./wrapper -->
