--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link href='http://fonts.googleapis.com/css?family=Gentium+Basic:400,700|Open+Sans:700,400' rel='stylesheet' type='text/css'>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="500, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>@Web_Dev_Rich</title>
     <link rel="stylesheet" href="assets/css/normalize.css">
     <link rel="stylesheet" href="assets/css/styles.css">
