--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-GB">
 <head>
     <link href='http://fonts.googleapis.com/css?family=Gentium+Basic:400,700|Open+Sans:700,400' rel='stylesheet' type='text/css'>
     <meta charset="utf-8">
