--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <div class="wrapper">
     <header>
-      <img src="assets/img/mypic.png" alt="">
+      <a href="http://webdevri.ch"><img src="assets/img/mypic.png" alt=""></a>
       <h1>Rich Keyzor</h1>
       <nav>
         <ul>
