Added ARIA landmark roles

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 </head>
 <body>
   <div class="wrapper">
-    <header>
+    <header role="banner">
       <a href="http://webdevri.ch"><img src="assets/img/mypic.png" alt=""></a>
       <h1>Rich Keyzor</h1>
-      <nav>
+      <nav role="navigation">
         <ul>
           <li><a href="#projects">Projects</a></li>
           <li><a href="#writings">Writings</a></li>
@@ -22,7 +22,7 @@
         </ul>
       </nav>
     </header>
-      <div class="main">
+      <div class="main" role="main">
         <div class="projects" id="projects">
           <h3>Projects</h3>
           <ul>
@@ -53,7 +53,7 @@
         <p>Catch me on <a href="https://github.com/Web-Dev-Rich">GitHub</a> and/or <a href="https://twitter.com/Web_Dev_Rich">Twitter</a></p>
       </div><!-- ./about-me -->
 
-      <footer>
+      <footer role="contentinfo">
         <p class="strong">Colophon</p>
         <p>This site was hand-crafted in <a href="http://www.sublimetext.com/2">Sublime Text 2</a> and <a href="https://www.google.co.uk/chrome/browser/canary.html">Chrome Canary</a>. It is hosted on <a href="https://pages.github.com/">GitHub Pages</a> and set in <a href="https://en.wikipedia.org/wiki/Open_Sans">Open Sans</a> and <a href="https://en.wikipedia.org/wiki/Gentium#Gentium_Basic_fonts">Gentium Basic</a> from <a href="https://www.google.com/fonts">Google Fonts</a>.</p>
       </footer>
