--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       </div><!-- ./main -->
       <div class="about-me" id="about-me">
         <h1>About Rich Keyzor</h1>
-        <p>I am a new web developer liking the front end of HTML, CSS and Javascript. I also like PHP to make things more dynamic and am learning all the time. Currently doing <a href="https://www.udemy.com/php-for-complete-beginners-includes-msql-object-oriented/#/">this course and learning whizzy HTML5 stuff on <a href="https://www.edx.org/course/learn-html5-w3c-w3cx-html5-1x"></a>this one</a>.</p>
+        <p>I am a new web developer liking the front end of HTML, CSS and Javascript. I also like PHP to make things more dynamic and am learning all the time. Currently doing <a href="https://www.udemy.com/php-for-complete-beginners-includes-msql-object-oriented/#/">this course</a> and learning whizzy HTML5 stuff on <a href="https://www.edx.org/course/learn-html5-w3c-w3cx-html5-1x">this one</a>.</p>
         <p>I also like to write about things I'm doing to spread the joy and learning.</p>
         <p>Catch me on <a href="https://github.com/Web-Dev-Rich">GitHub</a> and/or <a href="https://twitter.com/Web_Dev_Rich">Twitter</a></p>
       </div><!-- ./about-me -->
