--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="projects" id="projects">
           <h3>Projects</h3>
           <ul>
-            <li>A little <a href="http://freckleboy.uk/MyWebsites/7.%20PHP/weather-predictor.php">Weather Predictor app</a> that uses <span class="skill">HTML</span> /<span class="skill">CSS</span> /<span class="skill">jQuery</span> /<span class="skill">PHP</span> and a little <span class="skill">Bootstrap</span> styling.</li>
+            <li>A little <a href="http://keyzor.net/projects/weather-predictor/">Weather Predictor app</a> that uses <span class="skill">HTML</span> /<span class="skill">CSS</span> /<span class="skill">jQuery</span> /<span class="skill">PHP</span> and a little <span class="skill">Bootstrap</span> styling.</li>
 
             <li><a href="http://freckleboy.uk/MyWebsites/8.%20MySQL/secret-diary-project/index.php">Secret Diary</a>. An app for recording your thoughts. Built with <span class="skill">HTML</span> /<span class="skill">CSS</span> /<span class="skill">PHP</span> /<span class="skill">MySQL</span> and a sprinkling of <span class="skill">Bootstrap</span> styling.</li>
 
