--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <ul>
             <li>A little <a href="http://keyzor.net/projects/weather-predictor/">Weather Predictor app</a> that uses <span class="skill">HTML</span> /<span class="skill">CSS</span> /<span class="skill">jQuery</span> /<span class="skill">PHP</span> and a little <span class="skill">Bootstrap</span> styling.</li>
 
-            <li><a href="http://keyzor.net/projects/secret-diary/">Secret Diary</a>. An app for recording your thoughts. Built with <span class="skill">HTML</span> /<span class="skill">CSS</span> /<span class="skill">PHP</span> /<span class="skill">MySQL</span> and a sprinkling of <span class="skill">Bootstrap</span> styling.</li>
+            <li><a href="https://github.com/Web-Dev-Rich/secret-diary-project">Secret Diary</a>. An app for recording your thoughts. Built with <span class="skill">HTML</span> /<span class="skill">CSS</span> /<span class="skill">PHP</span> /<span class="skill">MySQL</span> and a sprinkling of <span class="skill">Bootstrap</span> styling.</li>
 
             <li>A <a href="http://keyzor.net/projects/postcode-finder/">Postcode Finder</a> that uses the <a href="https://developers.google.com/maps/documentation/geocoding/"><span class="skill">Google Maps Geocoding API</span></a> to find a postcode from an address. Built with <span class="skill">HTML</span> / <span class="skill">CSS</span> /<span class="skill">jQuery</span> /<span class="skill">PHP</span> and styled again, with <span class="skill">Bootstrap</span>.</li>
 
