Added MIT License

--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
       <footer role="contentinfo">
         <p class="strong">Colophon</p>
         <p>This site was hand-crafted in <a href="http://www.sublimetext.com/2">Sublime Text 2</a> and <a href="https://www.google.co.uk/chrome/browser/canary.html">Chrome Canary</a>. It is hosted on <a href="https://pages.github.com/">GitHub Pages</a> and set in <a href="https://en.wikipedia.org/wiki/Open_Sans">Open Sans</a> and <a href="https://en.wikipedia.org/wiki/Gentium#Gentium_Basic_fonts">Gentium Basic</a> from <a href="https://www.google.com/fonts">Google Fonts</a>.</p>
+        <p class="about-me">Created under <a href="https://webdevrich.mit-license.org/">MIT License</a></p>
       </footer>
   </div><!-- ./wrapper -->
 
