Moved postcode-finder to gh-pahes

--- a/index.html
+++ b/index.html
@@ -29,9 +29,11 @@
           <ul>
             <li>A little <a href="http://keyzor.net/projects/weather-predictor/">Weather Predictor app</a> that uses <span class="skill">HTML</span> /<span class="skill">CSS</span> /<span class="skill">jQuery</span> /<span class="skill">PHP</span> and a little <span class="skill">Bootstrap</span> styling.</li>
 
-            <li><a href="https://github.com/Web-Dev-Rich/secret-diary-project">Secret Diary</a>. An app for recording your thoughts. Built with <span class="skill">HTML</span> /<span class="skill">CSS</span> /<span class="skill">PHP</span> /<span class="skill">MySQL</span> and a sprinkling of <span class="skill">Bootstrap</span> styling.</li>
+            <li><a href="https://github.com/Web-Dev-Rich/secret-diary-project/">Secret Diary</a>. An app for recording your thoughts. Built with <span class="skill">HTML</span> /<span class="skill">CSS</span> /<span class="skill">PHP</span> /<span class="skill">MySQL</span> and a sprinkling of <span class="skill">Bootstrap</span> styling. (Currently not live. Link to <a href="https://github.com/Web-Dev-Rich/secret-diary-project/">GitHub repo</a>.</li>
 
-            <li>A <a href="http://keyzor.net/projects/postcode-finder/">Postcode Finder</a> that uses the <a href="https://developers.google.com/maps/documentation/geocoding/"><span class="skill">Google Maps Geocoding API</span></a> to find a postcode from an address. Built with <span class="skill">HTML</span> / <span class="skill">CSS</span> /<span class="skill">jQuery</span> /<span class="skill">PHP</span> and styled again, with <span class="skill">Bootstrap</span>.</li>
+            <li>A <a href="http://keyzor.net/projects/postcode-finder/">Postcode Finder</a> that uses the <a href="https://developers.google.com/maps/documentation/geocoding/"><span class="skill">Google Maps Geocoding API</span></a> to find a postcode from an address. Built with <span class="skill">HTML</span> / <span class="skill">CSS</span> /<span class="skill">jQuery</span> /<span class="skill">AJAX</span> and styled again, with <span class="skill">Bootstrap</span>.</li>
+
+            <li><a href="http://webdevri.ch/jQuery-Javascript-project/">Random colour grid generator</a> Built with <span class="skill">HTML</span> / <span class="skill">CSS</span> /<span class="skill">Vanilla Javascript</span>.</li>
 
             <li>Well, this very site, hand-forged from <span class="skill">HTML</span> and <span class="skill">CSS</span> in the fires of <span class="skill">Sublime Text</span>.</li>
 
