--- a/index.html
+++ b/index.html
@@ -29,9 +29,11 @@
           <ul>
             <li>A little <a href="http://keyzor.net/projects/weather-predictor/">Weather Predictor app</a> that uses <span class="skill">HTML</span> /<span class="skill">CSS</span> /<span class="skill">jQuery</span> /<span class="skill">PHP</span> and a little <span class="skill">Bootstrap</span> styling.</li>
 
-            <li><a href="https://github.com/Web-Dev-Rich/secret-diary-project/">Secret Diary</a>. An app for recording your thoughts. Built with <span class="skill">HTML</span> /<span class="skill">CSS</span> /<span class="skill">PHP</span> /<span class="skill">MySQL</span> and a sprinkling of <span class="skill">Bootstrap</span> styling. (Currently not live. Link to <a href="https://github.com/Web-Dev-Rich/secret-diary-project/">GitHub repo</a>.</li>
+            <li>A <a href="http://keyzor.net/projects/weather-predictor/">Code Player</a>. This is a little bit of practice using the <code>&lt;textarea&gt;</code> element and some <span class="skill">jQuery</span> to create a <a href="http://jsbin.com/?html,output">JSBin</a> like code player. The containers automatically resize to the window width by calculating the percentage width of each active section. Built with <span class="skill">HTML</span> /<span class="skill">CSS</span> /<span class="skill">jQuery</span> and a little <span class="skill">Bootstrap</span> styling.</li>
 
             <li>A <a href="http://keyzor.net/projects/postcode-finder/">Postcode Finder</a> that uses the <a href="https://developers.google.com/maps/documentation/geocoding/"><span class="skill">Google Maps Geocoding API</span></a> to find a postcode from an address. Built with <span class="skill">HTML</span> / <span class="skill">CSS</span> /<span class="skill">jQuery</span> /<span class="skill">AJAX</span> and styled again, with <span class="skill">Bootstrap</span>.</li>
+
+            <li><a href="https://github.com/Web-Dev-Rich/secret-diary-project/">Secret Diary</a>. An app for recording your thoughts. Built with <span class="skill">HTML</span> /<span class="skill">CSS</span> /<span class="skill">PHP</span> /<span class="skill">MySQL</span> and a sprinkling of <span class="skill">Bootstrap</span> styling. (Currently not live. Link to <a href="https://github.com/Web-Dev-Rich/secret-diary-project/">GitHub repo</a>.)</li>
 
             <li><a href="http://webdevri.ch/jQuery-Javascript-project/">Random colour grid generator</a> Built with <span class="skill">HTML</span> / <span class="skill">CSS</span> /<span class="skill">Vanilla Javascript</span>.</li>
 
