Updated about section

--- a/index.html
+++ b/index.html
@@ -27,15 +27,16 @@
         <div class="projects" id="projects">
           <h3>Projects</h3>
           <ul>
-            <li>A little <a href="http://webdevri.ch/weather-predictor/">Weather Predictor app</a> that uses <span class="skill">HTML</span> /<span class="skill">CSS</span> /<span class="skill">jQuery</span> /<span class="skill">PHP</span> and a little <span class="skill">Bootstrap</span> styling.</li>
 
-            <li>A <a href="http://webdevri.ch/CodePlayer/">Code Player</a>. This is a little bit of practice using the <code>&lt;textarea&gt;</code> element and some <span class="skill">jQuery</span> to create a <a href="http://jsbin.com/?html,output">JSBin</a> like code player. The containers automatically resize to the window width by calculating the percentage width of each active section. Built with <span class="skill">HTML</span> /<span class="skill">CSS</span> /<span class="skill">jQuery</span> and a little <span class="skill">Bootstrap</span> styling.</li>
+            <li>A <a href="http://webdevri.ch/CodePlayer/">Code Player</a>. This is a little bit of practice using the <code>&lt;textarea&gt;</code> element and some <span class="skill">jQuery</span> to create a <a href="http://jsbin.com/?html,output">JSBin</a> like code player. The containers automatically resize to the window width by calculating the percentage width of each active section. Built with <span class="skill">HTML</span> / <span class="skill">CSS</span> / <span class="skill">jQuery</span> and a little <span class="skill">Bootstrap</span> styling.</li>
 
-            <li>A <a href="http://webdevri.ch/postcode-finder/">Postcode Finder</a> that uses the <a href="https://developers.google.com/maps/documentation/geocoding/"><span class="skill">Google Maps Geocoding API</span></a> to find a postcode from an address. Built with <span class="skill">HTML</span> / <span class="skill">CSS</span> /<span class="skill">jQuery</span> /<span class="skill">AJAX</span> and styled again, with <span class="skill">Bootstrap</span>.</li>
+            <li>A <a href="http://webdevri.ch/postcode-finder/">Postcode Finder</a> that uses the <a href="https://developers.google.com/maps/documentation/geocoding/"><span class="skill">Google Maps Geocoding API</span></a> to find a postcode from an address. Built with <span class="skill">HTML</span> / <span class="skill">CSS</span> /<span class="skill">jQuery</span> / <span class="skill">AJAX</span> and styled again, with <span class="skill">Bootstrap</span>.</li>
 
-            <li><a href="https://github.com/Web-Dev-Rich/secret-diary-project/">Secret Diary</a>. An app for recording your thoughts. Built with <span class="skill">HTML</span> /<span class="skill">CSS</span> /<span class="skill">PHP</span> /<span class="skill">MySQL</span> and a sprinkling of <span class="skill">Bootstrap</span> styling. (Currently not live. Link to <a href="https://github.com/Web-Dev-Rich/secret-diary-project/">GitHub repo</a>.)</li>
+            <li>A little <a href="http://webdevri.ch/weather-predictor/">Weather Predictor app</a> that uses <span class="skill">HTML</span> / <span class="skill">CSS</span> / <span class="skill">jQuery</span> / <span class="skill">PHP</span> and a little <span class="skill">Bootstrap</span> styling.</li>
 
-            <li><a href="http://webdevri.ch/jQuery-Javascript-project/">Random colour grid generator</a> Built with <span class="skill">HTML</span> / <span class="skill">CSS</span> /<span class="skill">Vanilla Javascript</span>.</li>
+            <li><a href="https://github.com/Web-Dev-Rich/secret-diary-project/">Secret Diary</a>. An app for recording your thoughts. Built with <span class="skill">HTML</span> / <span class="skill">CSS</span> / <span class="skill">PHP</span> / <span class="skill">MySQL</span> and a sprinkling of <span class="skill">Bootstrap</span> styling. (Currently not live. Link to <a href="https://github.com/Web-Dev-Rich/secret-diary-project/">GitHub repo</a>.)</li>
+
+            <li><a href="http://webdevri.ch/jQuery-Javascript-project/">Random colour grid generator</a> Built with <span class="skill">HTML</span> / <span class="skill">CSS</span> / <span class="skill">Vanilla Javascript</span>.</li>
 
             <li>Well, this very site, hand-forged from <span class="skill">HTML</span> and <span class="skill">CSS</span> in the fires of <span class="skill">Sublime Text</span>.</li>
 
@@ -52,7 +53,7 @@
       </div><!-- ./main -->
       <div class="about-me" id="about-me">
         <h1>About Rich Keyzor</h1>
-        <p>I am a new web developer liking the front end of HTML, CSS and Javascript. I also like PHP to make things more dynamic and am learning all the time. Currently doing <a href="https://www.udemy.com/php-for-complete-beginners-includes-msql-object-oriented/#/">this course</a> and learnt whizzy HTML5 stuff on <a href="https://www.edx.org/course/learn-html5-w3c-w3cx-html5-1x">this one</a>, here is <a href="https://cl.ly/3f2P3O2W0C0S?_ga=1.230594524.179603895.1445504619">completion certificate</a>.</p>
+        <p>I am a new web developer liking the front end of HTML, CSS and Javascript. I also like PHP to make things more dynamic and am learning all the time. Currently doing the <a href="https://www.freecodecamp.com/web-dev-rich">Free Code Camp</a> front end syllabus and learnt whizzy HTML5 stuff on <a href="https://www.edx.org/course/learn-html5-w3c-w3cx-html5-1x">this one</a>, here is <a href="https://cl.ly/3f2P3O2W0C0S?_ga=1.230594524.179603895.1445504619">completion certificate</a>.</p>
         <p>I also like to write about things I'm doing to spread the joy and learning.</p>
         <p>Catch me on <a href="https://github.com/Web-Dev-Rich">GitHub</a> and/or <a href="https://twitter.com/Web_Dev_Rich">Twitter</a></p>
       </div><!-- ./about-me -->
