Added projects link to 100days

--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
 
             <li>Well, this very site, hand-forged from <span class="skill">HTML</span> and <span class="skill">CSS</span> in the fires of <span class="skill">Sublime Text</span>.</li>
 
+            <li><a href="https://webdevrich.wordpress.com/100daysofcode/">#100DaysofCode</a></li>
+
+
           </ul>
         </div><!-- ./projects -->
           <div class="writings" id="writings">
