--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en-GB">
 
 <head>
+  <link href="https://micro.blog/webdevrich" rel="me" />
   <link href='http://fonts.googleapis.com/css?family=Gentium+Basic:400,700|Open+Sans:700,400' rel='stylesheet' type='text/css'>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
