A html tag would be useful

--- a/holstee-manifesto/index.html
+++ b/holstee-manifesto/index.html
@@ -1,40 +1,42 @@
 <!doctype html>
-<head>
-	<title>Holstee Manifesto Project @Web_dev_Rich</title>
-	<link href="https://fonts.googleapis.com/css?family=Teko:400,700|Ultra" rel="stylesheet">
-  <link rel="stylesheet" href="css/styles.css">
-</head>
-<body>
-<div class="wrapper">
-	<div class="top-part">
-		<article class="color1 double-height">
-			<p class="teko-font large-text">This is your life. Do what you love, and do it often. If you don’t like something, change it. If you don’t like your job, quit.</p>
-			<p class="ultra-font large-text">If you don’t have enough time, stop watching TV.</p>
-		</article>
-		<article class="color2 single-height">
-			<p class="teko-font large-text">If you are looking for the love of your life, stop; They will be waiting for you when you start doing things you love.</p>
-		</article>
-		<article class="color4 single-height">
-			<p class="ultra-font small-text">Stop over analyzing, life is simple. All emotions are beautiful. When you eat, appreciate every last bite.</p>
-		</article>
-		<article class="color2 single-height teko-font large-text">
-				<p><span class="emphasis">Open your mind</span>, arms, and heart to new things and people, we are united in our differences.</p>
-		</article>
-		<article class="color3 single-height ultra-font">
-			<p>Ask the next person you see what their passion is and share your inspiring dream with them.</p>
-		</article>
-	</div> <!-- .top-part -->
-	<div class="bottom-part">
-		<article class="color1 double-height">
-			<p class="teko-font large-text">Life is about the <span class="emphasis">people you meet</span>, and the things you create with them so go out and start creating.</p>
-			<p class="ultra-font large-text">Life is short. Live your dream and share your passion.</p>
-		</article>
-		<article class="color4 single-height">
-			<p class="teko-font large-text">Travel often; getting lost will help you find yourself.</p>
-		</article>
-		<article class="color3 single-height ultra-font medium-text">
-			<p>Some opportunities only come once, seize them.</p>
-		</article>
-	</div> <!-- .bottom-part -->
-</div> <!-- .wrapper -->
-</body>
+<html>
+	<head>
+		<title>Holstee Manifesto Project @Web_dev_Rich</title>
+		<link href="https://fonts.googleapis.com/css?family=Teko:400,700|Ultra" rel="stylesheet">
+	  <link rel="stylesheet" href="css/styles.css">
+	</head>
+	<body>
+	<div class="wrapper">
+		<div class="top-part">
+			<article class="color1 double-height">
+				<p class="teko-font large-text">This is your life. Do what you love, and do it often. If you don’t like something, change it. If you don’t like your job, quit.</p>
+				<p class="ultra-font large-text">If you don’t have enough time, stop watching TV.</p>
+			</article>
+			<article class="color2 single-height">
+				<p class="teko-font large-text">If you are looking for the love of your life, stop; They will be waiting for you when you start doing things you love.</p>
+			</article>
+			<article class="color4 single-height">
+				<p class="ultra-font small-text">Stop over analyzing, life is simple. All emotions are beautiful. When you eat, appreciate every last bite.</p>
+			</article>
+			<article class="color2 single-height teko-font large-text">
+					<p><span class="emphasis">Open your mind</span>, arms, and heart to new things and people, we are united in our differences.</p>
+			</article>
+			<article class="color3 single-height ultra-font">
+				<p>Ask the next person you see what their passion is and share your inspiring dream with them.</p>
+			</article>
+		</div> <!-- .top-part -->
+		<div class="bottom-part">
+			<article class="color1 double-height">
+				<p class="teko-font large-text">Life is about the <span class="emphasis">people you meet</span>, and the things you create with them so go out and start creating.</p>
+				<p class="ultra-font large-text">Life is short. Live your dream and share your passion.</p>
+			</article>
+			<article class="color4 single-height">
+				<p class="teko-font large-text">Travel often; getting lost will help you find yourself.</p>
+			</article>
+			<article class="color3 single-height ultra-font medium-text">
+				<p>Some opportunities only come once, seize them.</p>
+			</article>
+		</div> <!-- .bottom-part -->
+	</div> <!-- .wrapper -->
+	</body>
+</html>
