Refactoring header code 1

--- a/index.html
+++ b/index.html
@@ -29,12 +29,10 @@
   <![endif]-->
 
   <!-- Add your site or application content here -->
-  <header id="header">
-    <div class="full-width">
-      <div class="half-width">
+  <header>
+      <div class="title">
         <h1>Rich Keyzor</h1>
-      </div>
-      <div class="half-width">
+      </div><!-- /.title -->
         <nav>
           <ul>
             <li><a href="#about">About</a></li>
@@ -42,10 +40,8 @@
             <li><a href="#contact">Contact</a></li>
           </ul>
         </nav>
-      </div>
       <h2><img src="img/computer-icon.png" alt="">Hello World, I’m <span class="my-name">Rich Keyzor</span>.</h2>
         <h3>I am a freelance front-end web developer. I try to make better web experiences for everyone.</h3>
-    </div>
   </header>
 
   <main>
